--- a/css/reset.css
+++ b/css/reset.css
@@ -60,6 +60,10 @@ textarea:focus {
 /* contents warp style  */
 .wrap {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   background-color: #fbfbfb;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
