--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ header .headerWrap {
   justify-content: space-between;
 }
 
+header .headerWrap a {
+  color: #fff;
+  font-size: 22px;
+}
+
 header .headerWrap .mIcon {
   width: 30px;
   height: auto;
@@ -27,9 +32,6 @@ header .mIcon span {
   height: 2px;
   background: #fff;
   display: block;
-}
-
-header .mIcon span:nth-child(1) {
 }
 
 header .mIcon span:nth-child(2) {
@@ -58,13 +60,13 @@ header h1 {
   grid-auto-rows: minmax(100px, auto);
 }
 
-.item {
+.container .item {
   border: 1px solid;
   background: #fff;
   border: 1px solid #eee;
 }
 
-.item:nth-child(1) {
+.container .item:nth-child(1) {
   grid-row: 1/5;
   display: flex;
   flex-direction: column;
@@ -73,7 +75,7 @@ header h1 {
   padding: 30px 0;
 }
 
-.item:nth-child(6) {
+.container .item:nth-child(6) {
   grid-column: 1/3;
 }
 
@@ -230,4 +232,35 @@ footer {
 footer p {
   color: #fff;
   font-weight: 400;
+}
+
+/* input form page style */
+.inputContainer {
+  width: 100%;
+  height: auto;
+  padding: 20px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 5px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
+.inputContainer .item {
+  border: 1px solid;
+  background: #fff;
+  border: 1px solid #eee;
+}
+
+.inputContainer .item:nth-child(1) {
+  grid-row: 1/5;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 30px 0;
+}
+
+.inputContainer .item:nth-child(6),
+.inputContainer .item:nth-child(7) {
+  grid-column: 1/3;
 }
