--- a/css/reset.css
+++ b/css/reset.css
@@ -42,7 +42,8 @@ textarea {
   -webkit-appearance: none;
 }
 
-input[type="checkbox"] {
+input[type="checkbox"],
+input[type="text"] {
   -webkit-appearance: auto;
   border-radius: 0;
   border: 1px solid #252525;
