--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,12 @@ canvas {
   font-size: 12px;
   width: 25px;
   text-align: right;
+  outline: 0;
+}
+
+.subPfBar .pfContents input[type="text"] {
+  -webkit-appearance: auto;
+  border: none;
 }
 
 .subPfBar .pfContents .rateNum:focus {
@@ -263,4 +269,8 @@ footer p {
 .inputContainer .item:nth-child(6),
 .inputContainer .item:nth-child(7) {
   grid-column: 1/3;
+}
+
+.inputContainer .subPfBar .pfContents .rateNum:focus {
+  border: none;
 }
