--- a/css/media.css
+++ b/css/media.css
@@ -30,6 +30,22 @@
     grid-column: 1/3;
   }
 
+  .inputContainer {
+    width: 100%;
+    height: auto;
+    padding: 20px 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+    grid-auto-rows: minmax(100px, auto);
+  }
+
+  .inputContainer .item {
+    border: 1px solid;
+    background: #fff;
+    border: 1px solid #eee;
+  }
+
   /* button box style */
   .btns {
     justify-content: center;
@@ -43,6 +59,22 @@
   /* footer style */
   footer {
     position: relative;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .item.inputBox .projectCate {
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .item.inputBox .projectTit {
+    font-size: 12px;
+    width: 100%;
+  }
+
+  .item.inputBox .projectCon {
+    font-size: 12px;
   }
 }
 
