--- a/css/reset.css
+++ b/css/reset.css
@@ -65,6 +65,7 @@ textarea:focus {
   background-color: #fbfbfb;
   display: flex;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+  justify-content: space-between;
   flex-direction: column;
 }
