2/15 수정: 창을 줄였을 때 푸터가 fix되어 섹션을 가리는 버그 수정. position: fixed의 특징 때문에 화면을 줄였을 때 본문을 푸터가 가리는 현상 발생. fixed 스타일을 없애준다.

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ header h1 {
   grid-template-columns: 1fr 1fr;
   grid-gap: 5px;
   grid-auto-rows: minmax(100px, auto);
+  padding: 20px 0;
 }
 
 .container .item {
@@ -231,7 +232,7 @@ footer {
   background-color: #3b5999;
   padding: 15px 0;
   text-align: center;
-  position: fixed;
+  _position: fixed;
   bottom: 0;
 }
 
