2/16 추가: 스케쥴 보드 페이지 스타일 추가 카테고리(탭) 포함 스케쥴 보드 페이지 스타일 추가 작업 반응형 작업 완료

--- a/css/media.css
+++ b/css/media.css
@@ -60,9 +60,15 @@
   footer {
     position: relative;
   }
+
+  /* schedule board page style */
+
+  .item.boardBox .boardTable span {
+    font-size: 12px;
+  }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 600px) {
   .item.inputBox .projectCate {
     font-size: 12px;
     width: 100%;
@@ -75,6 +81,23 @@
 
   .item.inputBox .projectCon {
     font-size: 12px;
+  }
+
+  /* schedule board page style */
+  .item.boardBox .boardTable span.boNum {
+    display: none;
+  }
+
+  .item.boardBox .boardTable span.boCate {
+    width: 30%;
+  }
+
+  .item.boardBox .boardTable span.boReg {
+    width: 30%;
+  }
+
+  .categoryTabs {
+    text-align: center;
   }
 }
 
@@ -98,7 +121,8 @@
 
   /* button style */
   .btns button {
-    width: 33.33%;
+    width: 50%;
+    padding: 10px 5px;
   }
 
   /* footer style */
@@ -108,5 +132,16 @@
 
   footer p {
     font-size: 12px;
+  }
+
+  /* schedule board page style */
+  .item.boardBox .boardTable span.boCate {
+    display: none;
+  }
+  .item.boardBox .boardTable span.boTit {
+    width: 60%;
+  }
+  .item.boardBox .boardTable span.boReg {
+    width: 40%;
   }
 }
