--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,8 @@ header .mIcon span:nth-child(3) {
   width: 70%;
 }
 
-header h1 {
+header h1,
+#title {
   font-weight: 400;
   font-size: 22px;
   padding: 10px 0;
@@ -219,6 +220,7 @@ canvas {
   font-weight: 400;
   font-family: "Noto Sans KR";
   padding: 10px 30px;
+  cursor: pointer;
 }
 
 .btns button:nth-child(2) {
@@ -318,4 +320,100 @@ footer p {
 .item.inputBox .projectTit:focus,
 .item.inputBox .projectCon:focus {
   border: 1px solid #3b5999;
+}
+
+/* schedule board page style */
+.item.boardBox {
+  padding: 10px;
+}
+
+.item.boardBox .boardTable {
+  width: 100%;
+  height: auto;
+  border-bottom: 1px solid #3b5999;
+}
+
+.item.boardBox .boardTable li:nth-child(odd) {
+  background: #eee;
+}
+
+.item.boardBox .boardTable li.boardTitle {
+  background: #3b5999;
+}
+
+.item.boardBox .boardTable .boardTitle,
+.item.boardBox .boardTable .boardList {
+  width: 100%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #111;
+  padding: 5px;
+}
+
+.item.boardBox .boardTable .boardTitle span {
+  color: #fff;
+}
+
+.item.boardBox .boardTable span {
+  text-align: center;
+  font-family: "Noto Sans KR";
+  padding: 8px 0;
+}
+
+.item.boardBox .boardTable span.boNum {
+  width: 10%;
+}
+.item.boardBox .boardTable span.boCate {
+  width: 20%;
+}
+.item.boardBox .boardTable span.boTit {
+  width: 50%;
+}
+.item.boardBox .boardTable span.boReg {
+  width: 20%;
+}
+
+.loadMore {
+  width: 100%;
+  height: auto;
+  margin-top: 5px;
+  text-align: center;
+}
+
+.loadMore button {
+  outline: 0;
+  border: 1px solid #3b5999;
+  background: #3b5999;
+  padding: 10px 30px;
+  color: #fff;
+  font-family: "Noto Sans KR";
+  cursor: pointer;
+  margin: 10px 0;
+}
+
+/* category */
+.categoryTabs {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.categoryTabs a {
+  display: inline-block;
+  border: 1px solid #3b5999;
+  background: #3b5999;
+  font-family: "Noto Sans KR";
+  padding: 8px 15px;
+  margin-bottom: 5px;
+  font-weight: 300;
+  background: #fff;
+  color: #3b5999;
+}
+
+.categoryTabs a.active {
+  background: #3b5999;
+  color: #fff;
 }
