--- a/css/style.css
+++ b/css/style.css
@@ -46,12 +46,12 @@ header .mIcon span:nth-child(3) {
   width: 70%;
 }
 
-/* header .headerWrap .mIcon:hover span {
-  width: 100%;
-} */
-
 header .headerWrap .mIcon.on span {
   width: 100%;
+}
+
+header .headerWrap .mIcon.on {
+  background: rgba(255, 255, 255, 0.1);
 }
 
 header h1,
@@ -59,6 +59,7 @@ header h1,
   font-weight: 400;
   font-size: 22px;
   padding: 10px 0;
+  text-align: center;
 }
 
 /* Hidden Header Style */
@@ -66,6 +67,11 @@ header h1,
   position: absolute;
   right: 0;
   top: 100%;
+  z-index: 10;
+}
+
+.hiddenHeader .depth-1 {
+  display: none;
 }
 
 .hiddenHeader .depth-1 li {
@@ -78,6 +84,11 @@ header h1,
   color: #fff;
   padding: 15px;
   border: 1px solid #3b5999;
+}
+
+.hiddenHeader .depth-1 li a:hover {
+  background: rgba(255, 255, 255);
+  color: #3b5999;
 }
 
 .hiddenHeader .depth-2 {
@@ -210,14 +221,10 @@ canvas {
 .subPfBar .pfContents .rateNum {
   font-weight: 300;
   font-size: 12px;
-  width: 25px;
+  width: 50px;
   text-align: right;
   outline: 0;
-}
-
-.subPfBar .pfContents input[type="text"] {
-  -webkit-appearance: auto;
-  border: none;
+  border: 1px solid #3b5999;
 }
 
 .subPfBar .pfContents .rateNum:focus {
@@ -412,14 +419,16 @@ footer p {
   width: 20%;
 }
 
-.loadMore {
+.loadMore,
+.subBtn {
   width: 100%;
   height: auto;
   margin-top: 5px;
   text-align: center;
 }
 
-.loadMore button {
+.loadMore button,
+.subBtn button {
   outline: 0;
   border: 1px solid #3b5999;
   background: #3b5999;
@@ -428,6 +437,10 @@ footer p {
   font-family: "Noto Sans KR";
   cursor: pointer;
   margin: 10px 0;
+}
+
+.subBtn {
+  display: none;
 }
 
 /* category */
@@ -521,7 +534,7 @@ footer p {
   width: 20%;
 }
 
-.item.viewBox .detailTit {
+.item.viewBox .detailTit .detailBox {
   width: 100%;
   height: auto;
   padding-left: 15px;
@@ -534,4 +547,29 @@ footer p {
   font-weight: 400;
   color: #3b5999;
   font-family: "Noto Sans KR";
+}
+
+/* hidden input style */
+.hiddenTit {
+  width: 80%;
+  height: 50px;
+  padding: 10px;
+  font-family: "Noto Sans KR";
+  border: 1px solid #ccc;
+  outline: 0;
+  display: none;
+  text-align: center;
+}
+
+.hiddenCon {
+  width: 100%;
+  height: 50px;
+  padding: 5px;
+  font-family: "Noto Sans KR";
+  border: 1px solid #ccc;
+  outline: 0;
+  resize: none;
+  overflow-y: hidden;
+  /* 스크롤바 히든 */
+  display: none;
 }
